4.42

ATTENTION:	SQL database table players has changed. Run DAddColumn_players_table_4_42.sql once (in Heidi or any other SQL tool) too update your SQL DB
			Your_A3_server_folder\@extDB3\sql_custom\domination-custom.ini has also changed. Please replace it with the version from the Domination 7z download
			
ATTENTION: The following mission file(s) has/have changed: TT Malden, Altis Blufor

- Added: Full InterceptDB support (see https://forums.bohemia.net/forums/topic/222595-intercept-database-sql-database-extension/ )
- Added: Player suppression, can be disabled in params "Player can be suppressed" or d_with_suppress in description.ext
- Added: If d_with_mhq_camo is enabled it is now possible to deploy a mhq without camo net by selecting it with the "Deploy with camo net" checkbox
- Added: Utility functions created fixed or improved: isinhouse, getbuildings, isvisible, sortarraybydistance, makemgroup now respects units per group, added dry run to occupy house script, by longtimegamer
- Added: If a SQL database is available then player movement on foot, in land, air and maritime vehicles is added to the database (in meter)
- Added: If a SQL database is available then number of player headshots and number of rounds fired are added to the database
- Added: Main target illumination flares when it is dark (can be disabled in lobby "Illuminate main target:" or d_IllumMainTarget in description.ext)
- Added: Parameter to enable/disable static weapon defenses at maintarget, by longtimegamer
- Added: RADIOPROTOCOL for the player can be disabled in the Status Dialog (not sure yet if it really does what it should)
- Added: d_uids_def_choppers (also available in dom_settings table); if the array is filled with player UIDs (strings) only those players can fly the initial choppers at base
- Added: Parameter d_dis_servicep/Disable all service points, including FARPs (no refuel, no repair, no rearm)
- Added: Fires at main targets