@@ -3,7 +3,7 @@
 #define THIS_FILE "fn_save_respawngear.sqf"
 #include "..\x_setup.sqf"
 
-if (d_without_nvg == 0 || {d_without_vec_ti == 0}) then {
+if (d_without_nvg == 0 || {d_without_ti == 0}) then {
 	call d_fnc_rem_ti_nvg_items;
 };
 
